@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/09/07
+	* Cleaned up the doridori parse clif function. [Skotlex]
+	* Merged some of mpeg's work on NJ skills [Skotlex]
 	* Removed the Warmth "stacking" code. [Skotlex]
 	* Added back the effect of /doridori to skill-SP regen [Skotlex]
 	* Implemented a rough version of Angel of the Sun/Moon/Stars, it has a low
